[package]
name = "hs110-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["clock"], default-features = false }
netdata-plugin = "0.2.0"
tplink-hs1x0 = { path = "../tplink-hs1x0" }
