[package]
name = "hs110-plugin"
version = "0.1.0"
edition = "2021"
default-run = "hs110-plugin"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["clock"], default-features = false }
futures = "0.3.26"
netdata-plugin = "0.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread"] }
tplink-hs110 = { path = "../../tplink-hs110" }
